little changes(im confuse dont surround)

--- a/newsphp/usuario/cuenta/micuenta.html
+++ b/newsphp/usuario/cuenta/micuenta.html
@@ -18,7 +18,7 @@ if ($_SESSION['usuario'] == '') {
 <head>
 	<meta charset="utf-8">
 	<title>Inicio suitcase</title>
-	<link rel="stylesheet" type="text/css" href="panel.css">
+	<link rel="stylesheet" type="text/css" href="C:\Users\USUARIO\Desktop\xampp\htdocs\suitcase\panel.css">
 	<link rel="icon" type="image/jpg" href="img/logo.png">
 	<link rel="stylesheet" type="text/css" href="inicio.css">
 </head>
