--- a/pagina.html
+++ b/pagina.html
@@ -108,7 +108,7 @@
 
 
 <div class="imgs2">
-<p><img src="img/hoja1.jpg" class="hoja1"><img src="img/logo.png" class="logo2"></p>
+<p><img src="img/hoja1.jpg" class="hoja1"><img src="img/logoinicio.png" class="logo2"></p>
 </div>
 <br>
 
