--- a/pagina.html
+++ b/pagina.html
@@ -18,7 +18,7 @@
 			<input type="checkbox" id="menu-bar">
 			<label class="icon-menu"for="menu-bar"></label>
 			<nav class="menu">
-				<a href="">INICIO</a>
+				<a href="inicio.php">INICIO</a>
 				<a href="ingreso.php">INGRESAR</a>
 		    <a href="registro.php">REGISTRO</a>
 			</nav>
@@ -223,7 +223,19 @@ function carrusel(contenedo){
 
     </script>
 
+<nav class="pie">
 
+  <br>
+	<br>
+
+	<h4 class="lpie">Eduplays</h4>
+	<center><h5 class="lpie">Derechos reservados de Suitcase</h5></center>
+	<center><h4 class="lpie">Telefono: 3203765372</h4></center>
+	<br>
+	<br>
+	<center><img src="img/redes.jpg" alt="imagen de Facebook, twitter, Instagram" class="redes"></center>
+
+</nav>
 
 </body>
 </html>
