--- a/pagina.html
+++ b/pagina.html
@@ -155,7 +155,7 @@
 
 <script type="text/javascript">
 
-  var imagenes = ['img/rojo.jpg','img/amarillo.jpg','img/blanco.jpeg','img/colores.jpg'],
+  var imagenes = ['img/iniciof2.jpeg','img/blanco.jpeg','img/iniciof1.jpeg','img/iniciof3.jpeg'],
        cont = 0;
 
 function carrusel(contenedo){
