--- a/pagina.html
+++ b/pagina.html
@@ -47,7 +47,7 @@
     </button>
 
 
-        <img src="img/rojo.jpg" id="imagen" alt="" class="c">
+        <img src="img/inicio5.jpg" id="imagen" alt="" class="c">
 
   </div>
   </center>
@@ -155,7 +155,7 @@
 
 <script type="text/javascript">
 
-  var imagenes = ['img/iniciof2.jpeg','img/blanco.jpeg','img/iniciof1.jpeg','img/iniciof3.jpeg'],
+  var imagenes = ['img/iniciof2.jpeg','img/inicio5.jpg','img/iniciof1.jpeg','img/iniciof3.jpeg'],
        cont = 0;
 
 function carrusel(contenedo){
