--- a/pagina.html
+++ b/pagina.html
@@ -69,7 +69,12 @@
 
         		<h2>
 
-        		SUITCASE es una plataforma en la que tendrás la posibilidad de demostrar y mejorar tus capacidades intelectivas para presentar diferentes tipos de examenes que te ayudarán en tu vida profesional.
+        		SUITCASE es una plataforma en la que tendrás la posibilidad de demostrar y mejorar tus capacidades intelectivas para presentar diferentes tipos de
+						examenes que te ayudarán en tu vida profesional.
+						No solo podras disfrutar de las pruebas exclusivas de suitcase si no tambien podras crear tus propias pruebas y realizar las de otros usuarios.
+
+
+
         	</h2>
         	</p></div></center>
           <br>
@@ -112,10 +117,8 @@
 <br>
 
 
-  <h2><center><div class="p2">En suitcase tendras una preparación completa para tu prueba de Estado; tendras la posibilidad de presentar de 3 a 5 simulacros
-       para mejorar cada vez más en tu progreso ademas de nuestro acompañamiento en cada competencia de la prueba por medio de
-       pequeños cuestionarios en los que te proporcionaremos la información suficiente para presentar una prueba que en realidad
-     pueda destacar.</center></h2></div></p>
+  <h2><center><div class="p2">En suitcase tendras una preparación completa para tu prueba de Estado; tendras la posibilidad de presentar de 3 a 5 simulacros para mejorar cada vez más en tu progreso ademas de nuestro acompañamiento en cada competencia de la prueba por medio de
+       pequeños cuestionarios en los que te proporcionaremos la información suficiente para presentar una prueba que en realidad pueda destacar.</center></h2></div></p>
 
      <br>
      <br>
