--- a/pagina.html
+++ b/pagina.html
@@ -142,7 +142,7 @@
 
  <div class="julioprofe">
 
-    <center><iframe width="70%" height="330" src="https://www.youtube.com/embed/YSuJgcJTSSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/wbUPZcQtc80" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </center>
 
     </center>
